<resources>
    <string name="app_name">Duka</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="signup_to_duka">SignUp to Duka!</string>
    <string name="confirmation_hint">Confirmation code will be sent to your phone number</string>
    <string name="duka_logo">Duka logo</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms">Terms and conditions</string>
    <string name="privacy_policy_text">By checking this box you are agreeing to our privacy poly and the terms and conditions</string>
    <string name="have_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="signup">Signup</string>
    <string name="dont_have_account">Don\'t have an account yet ?</string>
    <string name="login_hint">Enter your email and password to login</string>
    <string name="login_to_duka">Login to Duka!</string>
    <string name="enter_verification_code">Enter Confirmation Code</string>
    <string name="code_hint">Verification code has been sent to your phone number</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="select_service">Select Service</string>
    <string name="select_service_hint">If you want to sell your services or products on this platform please do select below.</string>
    <string name="photography">Photography</string>
    <string name="choose_service_hint">Select all services that you offer</string>
    <string name="electronics">Electronics</string>
    <string name="select_product">Select Product Type</string>
    <string name="choose_product_hint">Select all product categories that you provide</string>
    <string name="select_prouct_category">Select Product Category</string>
    <string name="profile">Profile</string>
    <string name="catalog">Catalog</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="quotes">Quotes</string>
    <string name="orders">Orders</string>
    <string name="fullname">Fullname</string>
    <string name="products">Products</string>
    <string name="services">Services</string>
    <string name="popular">Popular</string>
    <string name="ipsum">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English</string>
    <string name="sponsored_product_or_service_image">sponsored_product_or_service_image</string>
    <string name="view_all">view all</string>
    <string name="firstname">Name</string>
    <string name="surname">Surname</string>
    <string name="healthy">Healthy</string>
    <string name="logout">Logout</string>
    <string name="logged_out">Logged Out</string>
    <string name="logout_hint">Logged out successfully</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="title">Mathematics Textbook</string>
    <string name="supporting_text">R1500</string>
    <string name="content_description_media">Description of product image</string>
    <string name="buy">Buy</string>
    <string name="sample_cost">R450</string>
    <string name="add_item">Add new item</string>
    <string name="submit">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update_catalog">Add product or Service to your catalog</string>
    <string name="details">Add Product or Service to your Catalog</string>
    <string name="product_name">Product name</string>
    <string name="item_name">Name</string>
    <string name="item_cost">Price</string>
    <string name="item_category">Select Category</string>
    <string name="save">Save</string>
    <string name="product">Product</string>
    <string name="service">Service</string>
    <string name="upload_your_profile_photo">Upload the item picture here</string>
    <string name="item_desc">Description</string>
    <string name="add_catalog">My catalog</string>
    <string name="my_catalog">My Catalog</string>
    <string name="new_catalog">New Item</string>
    <string name="R_cost">R</string>
    <string name="sample_cost_value">450</string>
    <string name="book">Deep Learning</string>
    <string name="intro">Introductory Statistics</string>
    <string name="price">Price</string>
    <string name="_450">450</string>
    <string name="r">R</string>
    <string name="joined">19-08-2019</string>
    <string name="edit_profile_small">edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_">Mr.</string>
    <string name="title_person">Title</string>
    <string name="desc">The book is still new and in very good condition</string>
    <string name="place_order">Place Order</string>
    <string name="address">Address</string>
    <string name="delivery">Delivery</string>
    <string name="Collection">Collection</string>
    <string name="upcoming_orders">Upcoming Orders</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="shipping_information">Shipping Information</string>
    <string name="phonenumber">Phone</string>
    <string name="payment_type">Payment</string>
    <string name="payment_type_cash">Cash payment on delivery</string>
    <string name="type">Type</string>
    <string name="payment_information">Payment Information</string>
    <string name="total">Total</string>
    <string name="total_price">Total Price</string>
    <string name="r_450">R450</string>
    <string name="checkout">Checkout</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="date">Date</string>
</resources>