<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ConfirmationCodeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="156dp"
                android:layout_height="112dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/duka_logo"
                android:src="@drawable/duka_logo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enter_verification_code"
                android:textColor="@color/primary"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/code_hint"
                android:textColor="#333"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmation_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="50dp"
                android:hint="@string/confirmation_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/Next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/next" />

    </LinearLayout>
</FrameLayout>