<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LogoutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="156dp"
                android:layout_height="112dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/duka_logo"
                android:src="@drawable/duka_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/logged_out"
                android:textColor="@color/primary"
                android:textSize="28sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text="@string/logout_hint"
                android:textColor="#333"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>